--- a/public/index.html
+++ b/public/index.html
@@ -4,11 +4,11 @@
 <head>
   <meta charset="utf-8" />
   <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-  <title>ChemAcademy | Domine a Ciência da Matéria</title>
+  <title>Lykos | Plataforma de Ensino Online</title>
 
   <!-- Fonts -->
   <link
-    href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&amp;family=Fira+Code:wght@400&amp;display=swap"
+    href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@400;700&family=Space+Mono:wght@400;700&display=swap"
     rel="stylesheet" />
   <link
     href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&amp;display=swap"
@@ -24,9 +24,9 @@
     <div class="container-xl nav-inner">
       <div class="logo-container">
         <div class="logo-icon">
-          <span class="material-symbols-outlined">science</span>
+          <span class="material-symbols-outlined">school</span>
         </div>
-        <span class="logo-text hidden lg:block">ChemAcademy</span>
+        <span class="logo-text hidden lg:block">Lykos</span>
       </div>
 
       <button class="btn-nav hidden md:flex">
@@ -39,7 +39,7 @@
         <div class="search-icon-wrapper">
           <span class="material-symbols-outlined" style="font-size: 1.25rem">search</span>
         </div>
-        <input class="search-input" placeholder="Buscar mecanismos, termodinâmica..." type="text" />
+        <input class="search-input" placeholder="Buscar cursos, tópicos..." type="text" />
       </div>
 
       <!-- Right Actions -->
@@ -122,7 +122,7 @@
           </div>
           <div style="margin-bottom: 0.5rem">
             <label class="auth-label">Email</label>
-            <input type="email" id="register-email" class="auth-input" placeholder="marie@science.org" required />
+            <input type="email" id="register-email" class="auth-input" placeholder="usuario@exemplo.com" required />
           </div>
           <div class="grid grid-2" style="gap: 0.5rem; margin-bottom: 0.5rem">
             <div>
@@ -506,7 +506,7 @@
           </div>
           <div class="brand-item">
             <span class="material-symbols-outlined" style="font-size: 2rem">grid_view</span>
-            NANO-SCIENCE
+            TECH-EDU
           </div>
           <div class="brand-item">
             <span class="material-symbols-outlined" style="font-size: 2rem">hub</span>
@@ -530,9 +530,9 @@
               margin-bottom: 2rem;
             ">
           <div class="logo-icon" style="width: 2.25rem; height: 2.25rem">
-            <span class="material-symbols-outlined" style="font-size: 1.25rem">science</span>
+            <span class="material-symbols-outlined" style="font-size: 1.25rem">school</span>
           </div>
-          <span style="font-size: 1.25rem; font-weight: 700; color: white">ChemAcademy</span>
+          <span style="font-size: 1.25rem; font-weight: 700; color: white">Lykos</span>
         </div>
         <p style="
               color: var(--text-muted);
@@ -542,8 +542,8 @@
               margin-left: auto;
               margin-right: auto;
             ">
-          A infraestrutura digital de elite mundial para educação química,
-          pesquisa molecular e treinamento laboratorial.
+          Plataforma de ensino online de elite mundial,
+          proporcionando educação de excelência e treinamento avançado.
         </p>
         <div class="flex table" style="gap: 1.25rem; margin: 0 auto; justify-content: center;">
           <a href="#" class="btn-icon"><span class="material-symbols-outlined">public</span></a>
@@ -555,7 +555,7 @@
     </div>
 
     <div class="footer-bottom">
-      <p>© 2024 ChemAcademy Education Inc. Educação Molecularmente Precisa.</p>
+      <p>© 2024 Lykos Education Inc. Educação de Excelência.</p>
       <div class="flex" style="gap: 2.5rem">
         <a href="#" style="color: inherit; text-decoration: none">Termos</a>
         <a href="#" style="color: inherit; text-decoration: none">Privacidade</a>
