--- a/public/player.html
+++ b/public/player.html
@@ -41,10 +41,7 @@
             </div>
 
             <div class="nav-right-actions">
-                <a href="index.html" class="btn-dashboard outline">
-                    <span class="material-symbols-outlined">arrow_back</span>
-                    Back to Home
-                </a>
+
 
                 <!-- User Avatar (Triggers Auth Card) -->
                 <div id="user-avatar-btn">
@@ -122,8 +119,9 @@
                     <span class="material-symbols-outlined icon">play_circle</span>
                     <p>Selecione uma aula para começar</p>
                 </div>
-                <iframe id="video-frame" class="video-frame" src="" allowfullscreen
-                    allow="autoplay; encrypted-media"></iframe>
+                <iframe id="video-frame" class="video-frame" src="" title="Video Player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                 <video id="html5-player" class="video-frame hidden" controls controlsList="nodownload">
                     Seu navegador não suporta a tag de vídeo.
                 </video>
@@ -134,6 +132,10 @@
                 <div class="class-header">
                     <h1 id="class-title" class="class-title">Título da Aula</h1>
                     <div class="class-actions">
+                        <button id="btn-toggle-sidebar-restore" class="btn-action hidden">
+                            <span class="material-symbols-outlined">menu_open</span>
+                            <span class="btn-text">Mostrar Aulas</span>
+                        </button>
                         <button id="btn-mark-completed" class="btn-action">
                             <span class="material-symbols-outlined">check_circle</span>
                             <span class="btn-text">Marcar como Concluída</span>
@@ -161,6 +163,16 @@
         <!-- Right Column: Sidebar -->
         <aside class="player-sidebar">
             <div class="sidebar-header">
+                <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 0.5rem;">
+                    <button id="btn-collapse-sidebar" class="btn-sidebar-action">
+                        <span class="material-symbols-outlined" style="font-size: 1.1rem;">last_page</span>
+                        Recolher
+                    </button>
+                    <a href="index.html" class="btn-sidebar-action">
+                        <span class="material-symbols-outlined" style="font-size: 1.1rem;">arrow_back</span>
+                        Voltar
+                    </a>
+                </div>
                 <h2 class="course-title-sidebar" id="course-title">Nome do Curso</h2>
                 <div class="progress-container">
                     <div class="flex justify-between" style="font-size: 0.75rem; margin-bottom: 0.25rem;">
